[package]
authors = ["laopo001 <353272497@qq.com>"]
edition = "2018"
name = "html"
version = "0.1.0"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
kelake = {path = "../../packages/kelake"}
kelake-dom = {path = "../../packages/kelake-dom"}
kelake-macro = {path = "../../packages/kelake-macro"}
# serde_json = "1.0.61"
wasm-bindgen = "0.2.69"

[dependencies.web-sys]
version = "0.3.46"
features = [
  'Document',
  'Element',
  'HtmlElement',
  'Node',
  'Window',
]
